tests/codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.layout.method.missing.type.separator/reader-layout-method-missing-type-separator.mon
;; TEST-ID: tests.codegen.reader-error.reader-layout-method-missing-type-separator
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/typeclass-data-layout
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected '::' after method name 'foo'
;; TEST-ATOM: atom.reader.error.reader.layout.method.missing.type.separator
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.layout.method.missing.type.separator
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected '::' after method name 'foo'
;; TEST-READER-PATH: reader.c:1 parser.layout
;; TEST-CODEGEN-PATH: diagnostic.parser.layout
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:1 Expected '::' after method name 'foo'
;; TEST-USES-ATOM: atom.reader.error.reader.layout.method.missing.type.separator
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.layout
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/typeclass-data-layout/atom.reader.error.reader.layout.method.missing.type.separator
;; TEST-MENU-PATH: codegen/errors/reader/typeclass-data-layout/atom.reader.error.reader.layout.method.missing.type.separator
;; TEST-ATOM-LEAF: atom.reader.error.reader.layout.method.missing.type.separator
;; TEST-CLI-TARGET: codegen errors reader typeclass-data-layout

(module Main)
(layout Point where method foo Int)
